php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37667 Object is not added into array returned by __get
Submitted: 2006-06-01 14:05 UTC Modified: 2006-07-10 00:38 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:1 (100.0%)
From: alexander dot netkachev at gmail dot com Assigned: helly (profile)
Status: Closed Package: Class/Object related
PHP Version: 5.1.* OS: *
Private report: No CVE-ID: None
 [2006-06-01 14:05 UTC] alexander dot netkachev at gmail dot com
Description:
------------
The following code inserts only second object into property array.

Reproduce code:
---------------
class Class1 {
  protected $property = array();
  function __get($name) {
    return $this->property;
  }
}
class Class2 {}
$r = new Class1();
$r->Property[] = new Class2();
$r->Property[] = new Class2();
var_dump($r);

Expected result:
----------------
object(Class1)#1 (1) {
  ["property:protected"]=>
  array(1) {
    [0]=>
    object(Class2)#2 (0) {
    }
    [0]=>
    object(Class2)#3 (0) {
    }
  }
}

Actual result:
--------------
object(Class1)#1 (1) {
  ["property:protected"]=>
  array(1) {
    [0]=>
    object(Class2)#3 (0) {
    }
  }
}

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-06-01 18:54 UTC] tony2001@php.net
Dmitry, could you plz take a look at it?
 [2006-06-02 07:27 UTC] alexander dot netkachev at gmail dot com
BTW, I think about it more and now I'm not sure that the actual result should show two elements in the array.

Actually, when the array is returned from the function, it is returned by value, not by reference. __get seems to be an exception for this - it returns a reference to array.

E.g. 
<?php

class Class1 {
	var $property = array();
	function getProperty() {
		return $this->property;
	}
}

$c = new Class1();
$d = & $c->getProperty();
$d[] = 1;
var_dump($c);

?>

shows empty array in the $c object.
 [2006-06-02 22:50 UTC] helly@php.net
The engine sees the read to the array property as a write no matter whether it is a read or write operation. I think we should pass the correct mode and then in the get_property handler use the info to protect against writing to a returned array since reading it is pretty fine of course.
 [2006-06-02 23:18 UTC] helly@php.net
Ok, i have aptach for this which will generate an error for this non working write access.
 [2006-07-10 00:38 UTC] helly@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 05:00:02 2026 UTC