- MFH Fixed Bug #37667 (Object is not added into array returned by __get)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@216035 c90b9560-bf6c-de11-be94-00142212c4b1