Zend/zend_object_handlers.c
@@ -349,6 +349,9 @@ zval *zend_std_read_property(zval *object, zval *member, int type TSRMLS_DC)
 		zval_ptr_dtor(&tmp_member);
 		(*retval)->refcount--;
 	}
+	if (*retval && (type == BP_VAR_W || type == BP_VAR_RW) && Z_TYPE_PP(retval) == IS_ARRAY) {
+		zend_error(E_ERROR, "Cannot use array returned from %s::__get('%s') in write context", zobj->ce->name, Z_STRVAL_P(member));
+	}
 	return *retval;
 }
 
